# FileCompression

./: ByteToken.cpp  ByteToken.h  CMakeLists.txt  Constants.h  FileCompression.vcxproj  FileCompression.vcxproj.filters  Huffman.cpp  Huffman.h  Main.cpp  Menu.cpp  Menu.h  Node.cpp  Node.h  Origem.cpp  README.md  Utils.cpp  Utils.h  byteToken.cpp  byteToken.h  changelog.txt
src/: DecodingNode.cpp  DecodingNode.h  Huffman.cpp  Huffman.h  Menu.cpp  Node.cpp  Utils.h
